--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "dependencies": {
     "body-parser": "~1.12.0",
     "cookie-parser": "~1.3.4",
-    "cookie-session": "^1.2.0",
     "debug": "~2.1.1",
     "express": "~4.12.2",
     "express-session": "^1.11.3",
@@ -17,6 +16,7 @@
     "mongoose": "^4.0.3",
     "morgan": "~1.5.1",
     "serve-favicon": "~2.2.0",
-    "swig": "^1.4.2"
+    "swig": "^1.4.2",
+    "truncatise": "0.0.2"
   }
 }
